name:                     qdoc2psn
author:                   Remy Goldschmidt
version:                  0.0.1
stability:                Experimental
build-type:               Simple
cabal-version:            >= 1.10
category:                 PureScript, FFI Tools
copyright:                2016 Remy Goldschmidt <taktoa@gmail.com>
extra-source-files:       README.md
maintainer:               taktoa@gmail.com
homepage:                 https://github.com/taktoa/qdoc2psn
bug-reports:              https://github.com/taktoa/qdoc2psn/issues
license-file:             LICENSE.md
license:                  MIT
synopsis:                 Automatically generate FFI bindings for the C++11
                          backend of PureScript.
description:              See the README.

source-repository head
    type:     git
    location: https://github.com/taktoa/qdoc2psn.git

library
    build-depends:        base                  == 4.*
                        , containers            == 0.5.*
                        , xml                   == 1.3.*
                        , cereal                == 0.5.*
                        , mtl                   == 2.2.*
                        , hpath                 == 0.8.*
                        , safe                  == 0.3.*
                        , exceptions            == 0.8.*
                        , aeson                 == 0.11.*
                        , aeson-pretty          == 0.8.*
                        , zlib                  == 0.6.*
                        , store                 == 0.2.*
                        , text                  == 1.2.*
                        , bytestring            == 0.10.*
                        , ansi-wl-pprint        == 0.6.*
    default-language:     Haskell2010
    exposed-modules:      QDoc.Parser
    ghc-options:          -Wall
                          -O2
                          -fno-warn-type-defaults
                          -fno-warn-unused-do-bind
    ghc-prof-options:     -auto-all -prof
    hs-source-dirs:       src

executable qdoc2psn
    build-depends:        base, qdoc2psn
    default-language:     Haskell2010
    ghc-options:          -Wall -O2 -threaded -g
    main-is:              src/Main.hs
